Fix: spotlight header z-index hides tutorstarter menu

--- a/assets/scss/front/course-spotlight/index.scss
+++ b/assets/scss/front/course-spotlight/index.scss
@@ -85,7 +85,7 @@
 				padding: 8px 16px;
 				min-height: 60px;
 				position: relative;
-				z-index: 1025;
+				// z-index: 1025;
 
 				background: var(--tutor-color-primary);
 				color: var(--tutor-color-white);
